<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:weightSum="10"
    android:background="@drawable/roundedbuttongrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:gravity="center"
        android:text="@string/LV_postID"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/TV_LV_ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/LV_postID"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:gravity="center"
        android:text="@string/LV_Username"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/TV_LV_Username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/LV_Username"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:gravity="center"
        android:text="@string/LV_Title"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/TV_LV_Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:hint="@string/LV_Title"
        android:textAlignment="center"
        android:textSize="20sp" />



</LinearLayout>